--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input required id="cant" name="cant" type="number">
                 <label for="cost">Costo por unidad</label>
                 <input required id="cost" name="cost" type="number">
-                <button id="boton">Calcular TOTAL</button>
+                <button id="boton">Agregar Producto</button>
             </form>
             
         </section>
@@ -28,7 +28,7 @@
 
         </section>
         <section id="priceFinal">
-            <button id="calcButton">Calcular</button>
+            <button id="calcButton">Calcular costo total</button>
          <div id="div__costoFinal"></div>
         </section>
         
