--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <section class="form__section">
             <form id="formProds" action="">
               <label for="prod">Producto</label>
-                <input required id="prod" name="prod" type="text">
+                <input  id="prod" name="prod" type="text">
               <label for="cant">Cantidad</label>
-                <input required id="cant" name="cant" type="number">
+                <input  id="cant" name="cant" type="number">
                 <label for="cost">Costo por unidad</label>
-                <input required id="cost" name="cost" type="number">
+                <input  id="cost" name="cost" type="number">
                 <button id="boton">Agregar Producto</button>
             </form>
             
         </section>
         <section id="section__productos">
-
+            
         </section>
         <section id="priceFinal">
             <button id="calcButton">Calcular costo total</button>
