--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <label for="cant">Cantidad</label>
                 <input  id="cant" name="cant" type="number">
                 <label for="cost">Costo por unidad</label>
-                <input  id="cost" name="cost" type="number">
+                <input step="0.01"  id="cost" name="cost" type="number">
                <p id="clickSucess"></p>
                 <button class="btn btn-secondary" id="boton">Agregar Producto</button>
             </form>
