--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <section class="form__section">
             <form id="formProds" action="">
               <label for="prod">Producto</label>
-                <input  id="prod" name="prod" type="text">
+                <input placeholder="Ingresá el nombre..." id="prod" name="prod" type="text">
               <label for="cant">Cantidad</label>
-                <input  id="cant" name="cant" type="number">
+                <input placeholder="Ingresá cantidad..."  id="cant" name="cant" type="number">
                 <label for="cost">Costo por unidad</label>
-                <input step="0.01"  id="cost" name="cost" type="number">
+                <input placeholder="Ingresá el costo..."  step="0.01"  id="cost" name="cost" type="number">
                <p id="clickSucess"></p>
                 <button class="btn btn-secondary" id="boton">Agregar Producto</button>
             </form>
